feat: implement delegated user model with customer, driver, and operator separation